--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 # Telegram Bot Configuration
 telegram.bot.token=${TELEGRAM_BOT_TOKEN:your_bot_token_here}
 telegram.bot.username=${TELEGRAM_BOT_USERNAME:your_bot_username_here}
+telegram.admin.chat.id=${TELEGRAM_ADMIN_CHAT_ID:your_admin_chat_id_here}
